Really fix overlapping text in PaC wizard preview pane

--- a/server/src/main/webapp/WEB-INF/rails/webpack/views/pages/pac/styles.scss
+++ b/server/src/main/webapp/WEB-INF/rails/webpack/views/pages/pac/styles.scss
@@ -58,6 +58,7 @@ $shell-sample-cmd: $task-cmd-color;
   margin: 0;
 
   code {
+    white-space: pre;
     overflow-y: auto;
     display: block;
   }
